--- a/data/lang/fi.xml
+++ b/data/lang/fi.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Ylivertainen tykki" />
     <achv ID_Num="1198" ID="smallArmy" Name="Pieni armeija" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Etulinjan sotilas" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Luokitettujen taisteluiden sankari" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Yleispelaaja" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amatöörimetsästäjä" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Ammattimetsästäjä" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon on idoli" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Turnauksen osallistuja" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Pudotuspelit" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Maaliviiva" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Me olemme mestareita!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Kurskin taisteuln sankari" />
     <achv ID_Num="0" ID="unknown" Name="Tuntematon" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
