--- a/data/lang/hr.xml
+++ b/data/lang/hr.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Vrhovni top" />
     <achv ID_Num="1198" ID="smallArmy" Name="Mala vojska" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Vojnik bojišnice" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Junak rangiranih bitaka" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Univerzalni igrač" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Lovac amater" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Lovac profesionalac" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon je idol" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Sudionik turnira" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Eliminacijska faza" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Ciljna linija" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Mi smo šampioni!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Junak Kurske bitke" />
     <achv ID_Num="0" ID="unknown" Name="Nepoznati" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
