--- a/data/lang/nl.xml
+++ b/data/lang/nl.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Opperste kanon" />
     <achv ID_Num="1198" ID="smallArmy" Name="Klein leger" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Frontlinie soldaat" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Klassement-gevechten held" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="All-round speler" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amateurjager" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Professionele jager" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon is het idool" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Toernooideelnemer" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Knockout-fase" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Finishlijn" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="We are the Champions!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Held van de Slag om Koersk" />
     <achv ID_Num="0" ID="unknown" Name="Onbekend" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
