--- a/data/lang/pl.xml
+++ b/data/lang/pl.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Mocne działo" />
     <achv ID_Num="1198" ID="smallArmy" Name="Mała armia" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Żołnierz Linii frontu" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Bohater bitew rankingowych" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Gracz uniwersalny" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amator myślistwa" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Zawodowy myśliwy" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon jest idolem" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Uczestnik turnieju" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Etap  eliminacji" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Linia mety" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Jesteśmy mistrzami!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Bohater Bitwy na Łuku Kurskim" />
     <achv ID_Num="0" ID="unknown" Name="Nieznany" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
