--- a/data/lang/ru.xml
+++ b/data/lang/ru.xml
@@ -1512,6 +1512,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="«Профессионал»" />
     <achv ID_Num="1198" ID="smallArmy" Name="«Штурмовой взвод»" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="«Гроза передовой»" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Герой Ранговых боёв" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="И швец, и жнец" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Начинающий коллекционер" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Опытный коллекционер" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="«Буффонище! Футболище!»" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Участник турнира" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Игра на вылет" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Финишная прямая" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="«Такой футбол нам нужен!»" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Герой Курской битвы" />
     <achv ID_Num="0" ID="unknown" Name="Неизвестно" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
