--- a/data/lang/bg.xml
+++ b/data/lang/bg.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Върховно оръдие" />
     <achv ID_Num="1198" ID="smallArmy" Name="Малка армия" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Фронтовак" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Герой от Битките за Класацията" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Всестранен играч" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Начинаещ ловец" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Опитен ловец" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Буфон е върхът" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Участник в турнира" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Елиминационен етап" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Финална права" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Ние сме шампионите!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Герой от Битката при Курск" />
     <achv ID_Num="0" ID="unknown" Name="Неизвестно" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
