--- a/data/lang/cs.xml
+++ b/data/lang/cs.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Profesionální válečník" />
     <achv ID_Num="1198" ID="smallArmy" Name="Malá armáda" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Voják frontové linie" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Hrdina hodnocených bitev" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Všestranný hráč" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amatérský lovec" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Profesionální lovec" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon je idol" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Účastník turnaje" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Vyřazovací fáze" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Cílová čára" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Jsme mistři!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Hrdina bitvy u Kurska" />
     <achv ID_Num="0" ID="unknown" Name="Neznámo" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
