--- a/data/lang/da.xml
+++ b/data/lang/da.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Overlegen kanon" />
     <achv ID_Num="1198" ID="smallArmy" Name="Lille hær" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Frontlinje soldat" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Helt i rangerede kampe" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="All-round spiller" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amatørjæger" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Professionel jæger" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon er idolet" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Turneringsdeltager" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Knockout stadie" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Mållinje" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Vi er mestrene!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Helt i Slaget om Kursk" />
     <achv ID_Num="0" ID="unknown" Name="Ukendt" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
