--- a/data/lang/de.xml
+++ b/data/lang/de.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Oberstes Geschütz" />
     <achv ID_Num="1198" ID="smallArmy" Name="Kleine Armee" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Soldat der Frontlinie" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Held der gewerteten Gefechte" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Allroundspieler" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amateursammler" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Profisammler" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon ist das Idol" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Turnierteilnehmer" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="K.-o.-Phase" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Ziellinie" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Wir sind die Champions!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Held des Unternehmens Zitadelle" />
     <achv ID_Num="0" ID="unknown" Name="Unbekannt" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
