--- a/data/lang/en.xml
+++ b/data/lang/en.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Supreme Gun" />
     <achv ID_Num="1198" ID="smallArmy" Name="Small Army" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Frontline Soldier" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Ranked Battles Hero" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="All-round player" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amateur Hunter" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Professional Hunter" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon is the Idol" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Tournament Participant" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Knockout Stage" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Finish Line" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="We are the Champions!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Hero of the Battle of Kursk" />
     <achv ID_Num="0" ID="unknown" Name="Unknown" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
