--- a/data/lang/es.xml
+++ b/data/lang/es.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Cañón supremo" />
     <achv ID_Num="1198" ID="smallArmy" Name="Ejército en miniatura" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Soldado del frente" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Héroe de Batallas de clasificación" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Jugador total" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Cazador aficionado" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Cazador profesional" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon es el ídolo" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Participante del torneo." />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Fase eliminatoria" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Línea de meta" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="¡Somos los campeones!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Héroe de la Batalla de Kursk" />
     <achv ID_Num="0" ID="unknown" Name="Desconocido" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
