--- a/data/lang/et.xml
+++ b/data/lang/et.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Superkahur" />
     <achv ID_Num="1198" ID="smallArmy" Name="Pisiarmee" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Rindesõdur" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Edetabeli lahingute kangelane" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Supermängija" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amatöörkütt" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Professionaalne kütt" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon on iidol" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Turniiri osaline" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Väljalöömisetapp" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Finiš" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Me oleme võitjad!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Kurski lahingu kangelane" />
     <achv ID_Num="0" ID="unknown" Name="Tundmatu" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
