--- a/data/lang/fr.xml
+++ b/data/lang/fr.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Canon suprême" />
     <achv ID_Num="1198" ID="smallArmy" Name="Petite armée" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Soldat de la Ligne de front" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Héros des batailles classées" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Joueur complet" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Chasseur amateur" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Chasseur professionnel" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon est l'idole" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Participant du tournoi" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Phase éliminatoire" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Ligne d'arrivée" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Nous sommes les champions !" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Héros de la bataille de Koursk" />
     <achv ID_Num="0" ID="unknown" Name="Inconnu" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
