--- a/data/lang/hu.xml
+++ b/data/lang/hu.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Nagyágyú" />
     <achv ID_Num="1198" ID="smallArmy" Name="Kis sereg" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Frontvonal katonája" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Rangsorolt csaták hőse" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Sokoldalú játékos" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amatőr vadász" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Profi vadász" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon a bálvány" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Bajnokság részvevő" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Kieséses szakasz" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Célvonal" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Mi vagyunk a bajnokok!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="A kurszki csata hőse" />
     <achv ID_Num="0" ID="unknown" Name="Ismeretlen" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
