--- a/data/lang/it.xml
+++ b/data/lang/it.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Cannone supremo" />
     <achv ID_Num="1198" ID="smallArmy" Name="Piccolo esercito" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Soldato di Prima Linea" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Eroe delle Battaglie Classificate" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Giocatore tuttofare" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Cacciatore dilettante" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Cacciatore professionista" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon è un idolo" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Partecipante al torneo" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Fase a eliminazione diretta" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Traguardo" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Campioni del mondo!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Eroe della Battaglia di Kursk" />
     <achv ID_Num="0" ID="unknown" Name="Sconosciuto" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
