--- a/data/lang/lt.xml
+++ b/data/lang/lt.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Pagrindinis pabūklas" />
     <achv ID_Num="1198" ID="smallArmy" Name="Nedidelė kariuomenė" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Fronto linijos kareivis" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Reitinguojamų mūšių herojus" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Universalus žaidėjas" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Pradedantysis medžiotojas" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Profesionalus medžiotojas" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon yra dieviškas" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Turnyro dalyvis" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Atkrintamosios" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Finišo tiesioji" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Mes čempionai!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Kursko mūšio herojus" />
     <achv ID_Num="0" ID="unknown" Name="Nežinoma" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
