--- a/data/lang/lv.xml
+++ b/data/lang/lv.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Profesionālis" />
     <achv ID_Num="1198" ID="smallArmy" Name="Maza armija" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Frontes līnijas zaldāts" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Ranga kauju varonis" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Daudzpusīgs spēlētājs" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amatieru mednieks" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Profesionāls mednieks" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon ir elks" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Turnīra dalībnieks" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Izsišanas stadija" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Finiša līnija" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Mēs esam čempioni!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Kurskas kaujas varonis" />
     <achv ID_Num="0" ID="unknown" Name="Nezināms" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
