--- a/data/lang/pt.xml
+++ b/data/lang/pt.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Arma Suprema" />
     <achv ID_Num="1198" ID="smallArmy" Name="Pequeno Exército" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Soldado da Linha da Frente" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Herói das Batalhas Classificadas" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Jogador versátil" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Caçador Amador" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Caçador Profissional" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon é o Ídolo" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Participante do Torneio" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Fase de Eliminação" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Linha de Meta" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Nós Somos os Campeões!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Herói da Batalha de Kursk" />
     <achv ID_Num="0" ID="unknown" Name="Desconhecido" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
