--- a/data/lang/ro.xml
+++ b/data/lang/ro.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Tunul suprem" />
     <achv ID_Num="1198" ID="smallArmy" Name="Mica armată" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Soldat pe Front" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Erou al luptelor de clasament" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Jucător complet" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Vânător amator" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Vânător profesionist" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon e idolul" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Participant la turnament" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Sezonul eliminatoriu" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Linia de finiș" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Suntem campioni!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Erou al Bătăliei de la Kursk" />
     <achv ID_Num="0" ID="unknown" Name="Necunoscut" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
