--- a/data/lang/sr.xml
+++ b/data/lang/sr.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="\&quot;Profesionalac\&quot;" />
     <achv ID_Num="1198" ID="smallArmy" Name="\&quot;Mala armija\&quot;" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Frontovski vojnik" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Heroj rangiranih borbi" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Univerzalni igrač" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Lovac amater" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Profesionalni lovac" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Bufon je idol" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Učesnik turnira" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Nokaut faza" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Linija finiša" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Mi smo šampioni!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Heroj Bitke za Kursk" />
     <achv ID_Num="0" ID="unknown" Name="Nepoznato" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
