--- a/data/lang/sv.xml
+++ b/data/lang/sv.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Eldövertag" />
     <achv ID_Num="1198" ID="smallArmy" Name="Liten armé" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Frontsoldat" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Rankad Hjälte" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Allround-spelare" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amatörjägare" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Proffsjägare" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="Buffon är idolen" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Turneringsdeltagare" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Utslagningsstadiet" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Mållinjen" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Vi är vinnare!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Hjälte i Slaget vid Kursk" />
     <achv ID_Num="0" ID="unknown" Name="Okänd" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
