--- a/data/lang/tr.xml
+++ b/data/lang/tr.xml
@@ -1513,6 +1513,16 @@
     <achv ID_Num="1197" ID="supremeGun" Name="Üstün Silah" />
     <achv ID_Num="1198" ID="smallArmy" Name="Küçük Ordu" />
     <achv ID_Num="1199" ID="frontlineMedal" Name="Ön Cephe Askeri" />
+    <achv ID_Num="1200" ID="rankedBattlesHeroProgress" Name="Sıralamalı Savaş Kahramanı" />
+    <achv ID_Num="1201" ID="FE18Universal" Name="Çok Yönlü Oyuncu" />
+    <achv ID_Num="1202" ID="FE18Collection1" Name="Amatör Avcı" />
+    <achv ID_Num="1203" ID="FE18Collection2" Name="Profesyonel Avcı" />
+    <achv ID_Num="1204" ID="FE18Collection3" Name="İdolüm Buffon" />
+    <achv ID_Num="1205" ID="FE18OpenRegistration" Name="Turnuva Katılımcısı" />
+    <achv ID_Num="1206" ID="FE18OpenPlayOff" Name="Eleme Aşaması" />
+    <achv ID_Num="1207" ID="FE18OpenFinalStage" Name="Bitiş Çizgisi" />
+    <achv ID_Num="1208" ID="FE18OpenFirstPlace" Name="Biz Şampiyonlarız!" />
+    <achv ID_Num="1213" ID="medalKursk" Name="Kursk Muharebesi Kahramanı" />
     <achv ID_Num="0" ID="unknown" Name="Bilinmeyen" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
