--- a/data/lang/hr.xml
+++ b/data/lang/hr.xml
@@ -560,6 +560,8 @@
     <tank ID="GB93_Caernarvon_AX" sName="Caernarvon X" lName="Caernarvon Action X" />
     <tank ID="GB94_Centurion_Mk5-1_RAAC" sName="Centurion 5/1" lName="Centurion Mk. 5/1 RAAC" />
     <tank ID="GB95_Ekins_Firefly_M4A4" sName="Firefly VC" lName="Sherman VC Firefly" />
+    <tank ID="GB96_Excalibur" sName="Excalibur" lName="Excalibur" />
+    <tank ID="GB97_Chimera" sName="Chimera" lName="Chimera" />
     <tank ID="Grille" sName="Grille" lName="Grille" />
     <tank ID="GW_Mk_VIe" sName="G.Pz. Mk. VI" lName="G.Pz. Mk. VI (e)" />
     <tank ID="GW_Tiger_P" sName="G.W. Tiger P" lName="G.W. Tiger (P)" />
@@ -723,7 +725,9 @@
     <tank ID="PanzerJager_I" sName="Pz.Jäg. I" lName="Panzerjäger I" />
     <tank ID="Pershing" sName="Pershing" lName="M26 Pershing" />
     <tank ID="Pershing_IGR" sName="Pershing" lName="M26 Pershing" />
+    <tank ID="Pl01_TKS_20mm" sName="TKS 20" lName="TKS z n.k.m. 20 mm" />
     <tank ID="Pl03_PzV_Poland" sName="Pudel" lName="Pudel" />
+    <tank ID="Pl08_50TP_prototyp" sName="50TP prototyp" lName="50TP prototyp" />
     <tank ID="Pl08_Czolg_T_wz51" sName="50TP prototyp" lName="50TP prototyp" />
     <tank ID="Pro_Ag_A" sName="Leopard PT A" lName="Leopard Prototyp A" />
     <tank ID="Pz_II_AusfG" sName="Pz. II G" lName="Pz.Kpfw. II Ausf. G" />
@@ -833,6 +837,7 @@
     <tank ID="R153_Object_705" sName="Obj. 705" lName="Object 705" />
     <tank ID="R154_T_34E_1943" sName="T-34S" lName="T-34 zaštićeni" />
     <tank ID="R155_Object_277" sName="Obj. 277" lName="Object 277" />
+    <tank ID="R157_Object_279R" sName="Obj. 279 (e)" lName="Object 279 rani" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
     <tank ID="R18_SU-152" sName="SU-152" lName="SU-152" />
