--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -560,6 +560,8 @@
     <tank ID="GB93_Caernarvon_AX" sName="卡那封 AX" lName="卡那封 AX" />
     <tank ID="GB94_Centurion_Mk5-1_RAAC" />
     <tank ID="GB95_Ekins_Firefly_M4A4" />
+    <tank ID="GB96_Excalibur" />
+    <tank ID="GB97_Chimera" />
     <tank ID="Grille" sName="\" lName="\" />
     <tank ID="GW_Mk_VIe" sName="G.Pz.Mk.VI" lName="G.Pz.Mk.VI" />
     <tank ID="GW_Tiger_P" sName="Gw 虎(P)" lName="Gw 虎(P)" />
@@ -723,7 +725,9 @@
     <tank ID="PanzerJager_I" sName="I型突击炮" lName="I型突击炮" />
     <tank ID="Pershing" sName="M26 \" lName="M26 \" />
     <tank ID="Pershing_IGR" sName="M26 \" lName="M26 \" />
+    <tank ID="Pl01_TKS_20mm" />
     <tank ID="Pl03_PzV_Poland" sName="Pudel" lName="Pudel" />
+    <tank ID="Pl08_50TP_prototyp" />
     <tank ID="Pl08_Czolg_T_wz51" />
     <tank ID="Pro_Ag_A" sName="\" lName="\" />
     <tank ID="Pz_II_AusfG" sName="II号G型" lName="II号G型" />
@@ -833,6 +837,7 @@
     <tank ID="R153_Object_705" sName="705工程" lName="705工程" />
     <tank ID="R154_T_34E_1943" />
     <tank ID="R155_Object_277" />
+    <tank ID="R157_Object_279R" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
     <tank ID="R18_SU-152" sName="SU-152" lName="SU-152" />
