--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -858,6 +858,7 @@
     <tank ID="R156_IS_2M" />
     <tank ID="R157_Object_279R" />
     <tank ID="R158_LT_432" />
+    <tank ID="R159_SU_130PM" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R160_T_50_2" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -979,6 +980,7 @@
     <tank ID="S22_Strv_S1" sName="Strv S1" lName="Strv S1" />
     <tank ID="S23_Strv_81" sName="Strv 81" lName="Strv 81" />
     <tank ID="S23_Strv_81_sabaton" sName="Strv 81 S型" lName="Strv 81 S型" />
+    <tank ID="S25_EMIL_51" />
     <tank ID="S35_captured" sName="S35 739(f)" lName="S35 739(f)" />
     <tank ID="S-51" sName="S-51" lName="S-51" />
     <tank ID="Sexton_I" />
