--- a/data/lang/bg.xml
+++ b/data/lang/bg.xml
@@ -858,6 +858,7 @@
     <tank ID="R156_IS_2M" sName="ИС-2М" lName="ИС-2М" />
     <tank ID="R157_Object_279R" sName="Об. 279 (р)" lName="Обект 279 ранен" />
     <tank ID="R158_LT_432" sName="ЛТ-432" lName="ЛТ-432" />
+    <tank ID="R159_SU_130PM" sName="СУ-130ПМ" lName="СУ-130ПМ" />
     <tank ID="R16_SU-18" sName="СУ-18" lName="СУ-18" />
     <tank ID="R160_T_50_2" sName="Т-50-2" lName="Т-50-2" />
     <tank ID="R17_SU-100" sName="СУ-100" lName="СУ-100" />
@@ -979,6 +980,7 @@
     <tank ID="S22_Strv_S1" sName="Strv S1" lName="Strv S1" />
     <tank ID="S23_Strv_81" sName="Strv 81" lName="Strv 81" />
     <tank ID="S23_Strv_81_sabaton" sName="P:Victoria" lName="Primo Victoria" />
+    <tank ID="S25_EMIL_51" sName="EMIL 1951" lName="EMIL 1951" />
     <tank ID="S35_captured" sName="Pz. S35" lName="Pz.Kpfw. S35 739 (f)" />
     <tank ID="S-51" sName="С-51" lName="С-51" />
     <tank ID="Sexton_I" />
@@ -1565,6 +1567,18 @@
     <achv ID_Num="1222" ID="streamersEventAmway921" Name="За Амвэя и двор" />
     <achv ID_Num="1223" ID="streamersEventLeBwA" Name="Одной левой" />
     <achv ID_Num="1224" ID="twitchPrime" Name="Медал за служба \&quot;Отвъд дълга\&quot;" />
+    <achv ID_Num="1225" ID="alphaTester" Name="За участие в Алфа теста" />
+    <achv ID_Num="1226" ID="betaTester" Name="За участие в Бета теста" />
+    <achv ID_Num="1227" ID="10YearsOfService" Name="За 10 години служба" />
+    <achv ID_Num="1228" ID="09YearsOfService" Name="За 9 години служба" />
+    <achv ID_Num="1229" ID="08YearsOfService" Name="За 8 години служба" />
+    <achv ID_Num="1230" ID="07YearsOfService" Name="За 7 години служба" />
+    <achv ID_Num="1231" ID="06YearsOfService" Name="За 6 години служба" />
+    <achv ID_Num="1232" ID="05YearsOfService" Name="За 5 години служба" />
+    <achv ID_Num="1233" ID="04YearsOfService" Name="За 4 години служба" />
+    <achv ID_Num="1234" ID="03YearsOfService" Name="За 3 години служба" />
+    <achv ID_Num="1235" ID="02YearsOfService" Name="За 2 години служба" />
+    <achv ID_Num="1236" ID="01YearsOfService" Name="За 1 година служба" />
     <achv ID_Num="0" ID="unknown" Name="Неизвестно" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
