--- a/data/lang/nl.xml
+++ b/data/lang/nl.xml
@@ -858,6 +858,7 @@
     <tank ID="R156_IS_2M" sName="IS-2M" lName="IS-2M" />
     <tank ID="R157_Object_279R" sName="Obj. 279 (e)" lName="Object 279 early" />
     <tank ID="R158_LT_432" sName="LT-432" lName="LT-432" />
+    <tank ID="R159_SU_130PM" sName="SU-130PM" lName="SU-130PM" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R160_T_50_2" sName="T-50-2" lName="T-50-2" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -979,6 +980,7 @@
     <tank ID="S22_Strv_S1" sName="Strv S1" lName="Strv S1" />
     <tank ID="S23_Strv_81" sName="Strv 81" lName="Strv 81" />
     <tank ID="S23_Strv_81_sabaton" sName="P:Victoria" lName="Primo Victoria" />
+    <tank ID="S25_EMIL_51" sName="EMIL 1951" lName="EMIL 1951" />
     <tank ID="S35_captured" sName="Pz. S35" lName="Pz.Kpfw. S35 739 (f)" />
     <tank ID="S-51" sName="S-51" lName="S-51" />
     <tank ID="Sexton_I" />
@@ -1565,6 +1567,18 @@
     <achv ID_Num="1222" ID="streamersEventAmway921" Name="За Амвэя и двор" />
     <achv ID_Num="1223" ID="streamersEventLeBwA" Name="Одной левой" />
     <achv ID_Num="1224" ID="twitchPrime" Name="Verder dan de roeping dienstmedaille" />
+    <achv ID_Num="1225" ID="alphaTester" Name="Voor deelname aan de alfa-test" />
+    <achv ID_Num="1226" ID="betaTester" Name="Voor deelname aan de beta-test" />
+    <achv ID_Num="1227" ID="10YearsOfService" Name="Voor 10 jaar dienst" />
+    <achv ID_Num="1228" ID="09YearsOfService" Name="Voor 9 jaar dienst" />
+    <achv ID_Num="1229" ID="08YearsOfService" Name="Voor 8 jaar dienst" />
+    <achv ID_Num="1230" ID="07YearsOfService" Name="Voor 7 jaar dienst" />
+    <achv ID_Num="1231" ID="06YearsOfService" Name="Voor 6 jaar dienst" />
+    <achv ID_Num="1232" ID="05YearsOfService" Name="Voor 5 jaar dienst" />
+    <achv ID_Num="1233" ID="04YearsOfService" Name="Voor 4 jaar dienst" />
+    <achv ID_Num="1234" ID="03YearsOfService" Name="Voor 3 jaar dienst" />
+    <achv ID_Num="1235" ID="02YearsOfService" Name="Voor 2 jaar dienst" />
+    <achv ID_Num="1236" ID="01YearsOfService" Name="Voor 1 jaar dienst" />
     <achv ID_Num="0" ID="unknown" Name="Onbekend" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
