--- a/data/lang/pt.xml
+++ b/data/lang/pt.xml
@@ -858,6 +858,7 @@
     <tank ID="R156_IS_2M" sName="IS-2M" lName="IS-2M" />
     <tank ID="R157_Object_279R" sName="Obj. 279 (e)" lName="Object 279 early" />
     <tank ID="R158_LT_432" sName="LT-432" lName="LT-432" />
+    <tank ID="R159_SU_130PM" sName="SU-130PM" lName="SU-130PM" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R160_T_50_2" sName="T-50-2" lName="T-50-2" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -979,6 +980,7 @@
     <tank ID="S22_Strv_S1" sName="Strv S1" lName="Strv S1" />
     <tank ID="S23_Strv_81" sName="Strv 81" lName="Strv 81" />
     <tank ID="S23_Strv_81_sabaton" sName="P:Victoria" lName="Primo Victoria" />
+    <tank ID="S25_EMIL_51" sName="EMIL 1951" lName="EMIL 1951" />
     <tank ID="S35_captured" sName="Pz. S35" lName="Pz.Kpfw. S35 739 (f)" />
     <tank ID="S-51" sName="S-51" lName="S-51" />
     <tank ID="Sexton_I" />
@@ -1565,6 +1567,18 @@
     <achv ID_Num="1222" ID="streamersEventAmway921" Name="За Амвэя и двор" />
     <achv ID_Num="1223" ID="streamersEventLeBwA" Name="Одной левой" />
     <achv ID_Num="1224" ID="twitchPrime" Name="Medalha de Serviço Para Além do Chamamento" />
+    <achv ID_Num="1225" ID="alphaTester" Name="Pela participação no Alpha test" />
+    <achv ID_Num="1226" ID="betaTester" Name="Pela participação no Beta test" />
+    <achv ID_Num="1227" ID="10YearsOfService" Name="Por 10 anos de serviço" />
+    <achv ID_Num="1228" ID="09YearsOfService" Name="Por 9 anos de serviço" />
+    <achv ID_Num="1229" ID="08YearsOfService" Name="Por 8 anos de serviço" />
+    <achv ID_Num="1230" ID="07YearsOfService" Name="Por 7 anos de serviço" />
+    <achv ID_Num="1231" ID="06YearsOfService" Name="Por 6 anos de serviço" />
+    <achv ID_Num="1232" ID="05YearsOfService" Name="Por 5 anos de serviço" />
+    <achv ID_Num="1233" ID="04YearsOfService" Name="Por 4 anos de serviço" />
+    <achv ID_Num="1234" ID="03YearsOfService" Name="Por 3 anos de serviço" />
+    <achv ID_Num="1235" ID="02YearsOfService" Name="Por 2 anos de serviço" />
+    <achv ID_Num="1236" ID="01YearsOfService" Name="Por 1 ano de serviço" />
     <achv ID_Num="0" ID="unknown" Name="Desconhecido" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
