--- a/data/lang/sv.xml
+++ b/data/lang/sv.xml
@@ -858,6 +858,7 @@
     <tank ID="R156_IS_2M" sName="IS-2M" lName="IS-2M" />
     <tank ID="R157_Object_279R" sName="Obj. 279 (t)" lName="Object 279 tidig" />
     <tank ID="R158_LT_432" sName="LT-432" lName="LT-432" />
+    <tank ID="R159_SU_130PM" sName="SU-130PM" lName="SU-130PM" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R160_T_50_2" sName="T-50-2" lName="T-50-2" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
@@ -979,6 +980,7 @@
     <tank ID="S22_Strv_S1" sName="Strv S1" lName="Strv S1" />
     <tank ID="S23_Strv_81" sName="Strv 81" lName="Strv 81" />
     <tank ID="S23_Strv_81_sabaton" sName="P:Victoria" lName="Primo Victoria" />
+    <tank ID="S25_EMIL_51" sName="EMIL 1951" lName="EMIL 1951" />
     <tank ID="S35_captured" sName="Pz. S35" lName="Pz.Kpfw. S35 739 (f)" />
     <tank ID="S-51" sName="S-51" lName="S-51" />
     <tank ID="Sexton_I" />
@@ -1565,6 +1567,18 @@
     <achv ID_Num="1222" ID="streamersEventAmway921" Name="За Амвэя и двор" />
     <achv ID_Num="1223" ID="streamersEventLeBwA" Name="Одной левой" />
     <achv ID_Num="1224" ID="twitchPrime" Name="Medalj för tjänstgöring utöver pliktens kall" />
+    <achv ID_Num="1225" ID="alphaTester" Name="För deltagande under Alfatestet" />
+    <achv ID_Num="1226" ID="betaTester" Name="För deltagande under Betatestet" />
+    <achv ID_Num="1227" ID="10YearsOfService" Name="För 10 års tjänstgöring" />
+    <achv ID_Num="1228" ID="09YearsOfService" Name="För 9 års tjänstgöring" />
+    <achv ID_Num="1229" ID="08YearsOfService" Name="För 8 års tjänstgöring" />
+    <achv ID_Num="1230" ID="07YearsOfService" Name="För 7 års tjänstgöring" />
+    <achv ID_Num="1231" ID="06YearsOfService" Name="För 6 års tjänstgöring" />
+    <achv ID_Num="1232" ID="05YearsOfService" Name="För 5 års tjänstgöring" />
+    <achv ID_Num="1233" ID="04YearsOfService" Name="För 4 års tjänstgöring" />
+    <achv ID_Num="1234" ID="03YearsOfService" Name="För 3 års tjänstgöring" />
+    <achv ID_Num="1235" ID="02YearsOfService" Name="För 2 års tjänstgöring" />
+    <achv ID_Num="1236" ID="01YearsOfService" Name="För 1 års tjänstgöring" />
     <achv ID_Num="0" ID="unknown" Name="Okänd" />
   </Lang_Achievements>
   <Lang_PersonalMissions>
